added circleci folder & new index.html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title>AWS Exercise Front on S3</title>
-   <meta charset=utf-8> 
-   </head>
-   <body>
-   <p>Hello World</p>
-   <p>next paragraph</p>
-   </body>
+    <title>AWS Exercise Frontend on S3</title>
+  </head>
+
+  <body>
+    <p>Hello World</p>
+    <p>next paragraph</p>
+  </body>
+
+</html>
 
